    depends on it
  * Added radvd to nova_sudoers file (LP: #758072)
  * Make nova.conf non-world-readable, as it may contain DB passwords
    (LP: #798878)

  [ Brian Waldon ]
  * Remove nova-instancemonitor man page stub.
  * Remove nova-instancemonitor from apport hook.

  [ Monty Taylor ]
  * Added python-lxml to build-deps.

 -- Monty Taylor <mordred@inaugust.com>  Tue, 02 Aug 2011 15:55:40 -0700

nova (2011.3~d1-0ubuntu1) oneiric; urgency=low

  [Chuck Short]
  * New upstream version.

  [Soren Hansen]
  * libvirt plugin was refactored. Adjust ajaxterm patch accordingly.
  * Add /sbin/brctl to sudoers (it moved from /usr/sbin to /sbin in
    Oneiric).
  * Add dependencies on dnsmasq-base and bridge-utils to nova-network.
    (LP: #790661)

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 02 Jun 2011 09:30:39 -0400

nova (2011.3~bzr1108-0ubuntu1) oneiric; urgency=low

  [ Thomas Goirand ]
  * Removes embedded jquery.js from nova-doc package.
  * Added some manpages stubs to make package lintian clean.
  * Adds a nova-volume.default where the admin can decide what VG to use.
  * debian/nova-objectstore.logrotate working in Debian.
  * Do not have debian/*.upstart files in Debian. Using debian/*.upstart.in
  and copying them as .upstart only if building in Ubuntu.
  * Nova init files reviewed so that they are working in Debian.
  * Initscripts of nova-compute now has a Should-Start: libvirt-bin
  * nova-compute.postinst working with libvirt group in Debian.
  * Reviewed the package descriptions.
  * Reviewed some dependencies in debian/control (added some adduser and
  lsb-base depends).
  * Added missing binary Depends: (nova-manage must depends on
  python-amqplib unless failing puiparts tests, nova-compute is pretty
  usless without qemu-utils)
  * Removes .gitignore files from binaries.
  * Don't package nova-manage.1 man page if we aren't building docs.
  * Packages correctly: nova-manage.1 and not novamanage.1 !!!

  [ Soren Hansen ]