@@ -10,10 +10,10 @@ chdir /var/run
 
 pre-start script
 	mkdir -p /var/run/nova
-	chown nova:root /var/run/nova
+	chown nova:root /var/run/nova/
 
 	mkdir -p /var/lock/nova
-	chown nova:root /var/lock/nova
+	chown nova:root /var/lock/nova/
 
 	modprobe nbd
 end script
