@@ -28,6 +28,10 @@ nova (2011.3~d1-0ubuntu2) UNRELEASED; urgency=low
   [ Monty Taylor ]
   * Added python-lxml to build-deps.
 
+  [ Scott Moser ]
+  * use trailing '/' on all usages of chown to support the case where
+    the directory is a symlink
+
  -- Monty Taylor <mordred@inaugust.com>  Tue, 02 Aug 2011 15:55:40 -0700
 
 nova (2011.3~d1-0ubuntu1) oneiric; urgency=low
